Fixed spacing and image sizes on the home page

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,9 +2,9 @@ header {
   margin:0;
   flex:1;
   text-align:center;
-  display:inherit;
-  z-index: -1;
   flex-direction:column;
+  position:absolute;
+  width:100vw;
 }
 
 .vp-logo {
