--- a/src/components/homepage/HomePage.css
+++ b/src/components/homepage/HomePage.css
@@ -37,5 +37,6 @@ li:hover {
   position: absolute;
   height:80vh;
   width:80vw;
+  z-index: -1;
 }
 
