--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -17,6 +17,7 @@
   height: 100vh;
   display:inline-flex;
   flex-direction: column;
+  padding-top:9em;
 }
 
 
